# Vision-Language-Memory

./: .gitattributes  .gitignore  INSPIRE.md  README.md  data.lock.json  models.lock.json  pyproject.toml
configs/: cluster.env.example  inspire.env.example
data/: README.md
models/: README.md
requirements/: README.md  inspire-ngc2502-pinned.txt  runtime-pinned.txt
tests/: test_cluster_dag.py  test_determinism_pair_wrapper.py  test_differentiable_mobile.py  test_dreamlite_training_contracts.py  test_episode_generator.py  test_episode_lightweight.py  test_episode_routing.py  test_episode_schema.py  test_event_prefix_semantic_upper_bound.py  test_formal_scorers.py  test_inspire_job_status_capture.py  test_inspire_platform_status_capture.py  test_inspire_qwen_history_baseline.py  test_inspire_qwen_history_r4.py  test_inspire_r3_dag.py  test_inspire_r3_micro_renderer.py  test_inspire_runtime.py  test_model_snapshot_manifest.py  test_pilot_selection.py  test_prefeval_adapter.py  test_prefeval_metrics.py  test_qwen_deterministic_resize.py  test_qwen_full_event_history.py  test_qwen_history_baseline_reporting.py  test_qwen_history_r4.py  test_qwen_history_r4_audit.py  test_qwen_history_r4_contract.py  test_qwen_history_r4_reporting.py  test_qwen_history_r4_reporting_failure.py  test_qwen_history_r4_state_swap_diagnosis.py  test_qwen_history_r5_contract.py  test_qwen_reader_loss.py  test_qwen_resize_contract.py  test_qwen_sanity.py  test_qwen_scorer_contract.py  test_qwen_visual_features.py  test_r3_gate.py  test_r3_micro.py  test_r3_micro_orchestration.py  (+25 more)
(+155 files in other folders)
